Hide pointer_events to undo slide functionality

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -85,9 +85,9 @@
     background-color: rgb(255, 194, 137) !important;
   }
 
-  .row_events {
+/*  .row_events {
     pointer-events: none;
-  }
+  }*/
 
 
 </style>
