update nav bar in show to be align 100%

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -54,7 +54,7 @@
 <!-- Container for event photo and description -->
 <div id="whole_thang">
 	<section class="description">
-		<div class="container-fluid">
+		<div class="container-fluid" style="padding: 0px;">
 			<div class="row group_photo_row">
 				<div class="col-md-12 text-center">
 					<img src="<%= @event.group_photo %>" class="group_photo">
