Add swipe feature in show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -119,7 +119,7 @@ $(".glyphicon-star.index").click(function(){
 
 <script>
 $('#whole_thang').on('swipe', function(){
-	var url = url.delete('http://accessfuel.herokuapp.com/events/')
+	var url = 'http://accessfuel.herokuapp.com/events/'
 	// var url = 'http://localhost:3000/events/'
 	console.log(url)
 	var current_id = <%= params[:id] %>
