--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -26,10 +26,12 @@
 
   .event_date {
     font-size: .70em;
+    font-weight: 500;
   }
 
   .location {
     font-size: .70em;
+    font-weight: 500;
   }
 
   ul#col1 {
