Fix margins in list view

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 <!-- Events Listing Container-->
 <div class="container-fluid content">
 	<div class="row row_filter">
-		<div class="column col-xs-12 text-center">
+		<div class="column col-xs-12 text-center" style="padding:0px">
 			<div class="btn-group">
 			  <button type="button" id="today" class="btn btn-default" onclick="today()">Today</button>
 			  <button type="button" id="tomorrow" class="btn btn-default" onclick="tomorrow()">Tomorrow</button>
