start incorporating rob's revisions, including removing text shadow, enlarging logo, and lowering opacity on modal overlay

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -25,6 +25,7 @@ $maincolor: lighten(#ccc, 40%);
 
 .navbar-brand {
 	padding: 5px 5px;
+	height: 55px;
 }
 
 .glyphicon.glyphicon.glyphicon-align-justify {
