--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -28,6 +28,10 @@
     display: block;
   }
 
+  .ui-page-theme-a {
+    text-shadow: 0 0 0 #f3f3f3 !important;
+  }
+
   .welcomeCopy {
     margin: 0 auto;
     margin-bottom: 20px;
