--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -28,19 +28,23 @@ $maincolor: lighten(#ccc, 40%);
 	height: 55px;
 }
 
+.navbar-toggle {
+	border: none !important;
+}
+
 .glyphicon.glyphicon.glyphicon-align-justify {
 	color: gray;
 }
 
-.glyphicon.glyphicon-calendar {
+.mobileNavIcon {
 	color: rgb(248, 146, 49);
-	padding-top: 20px;
-	margin-left: 50%;
+	display: inline-block;
+	/*margin-left: 50%;*/
+	padding: 9px 10px;
 }
 
 .glyphicon.glyphicon-star {
 	color: rgb(248, 146, 49);
-	padding-top: 20px;
 }
 
 .header_row {
