--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -59,7 +59,7 @@
     padding-right: 0px;
   }
 
-  .btn.btn-primary {
+  .btn.btn-default {
     margin: 0 auto;
     display: block;
     width: auto !important;
@@ -99,7 +99,7 @@
 </style>
 <!-- <div class="box"></div> -->
 
-<button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">How to Use</button>
+<button class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-sm">How to Use</button>
 
 <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
