--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -4,18 +4,29 @@
       <div class="container">
         <%= link_to image_tag("Icon_final.png", :class => "navbar-brand"), root_path %>
 
-        <%= link_to(events_path) do %>
-         <span class='glyphicon glyphicon-calendar'></span>
-         <% end %>
+        <div class="mobileNavIcon">
+          <%= link_to(events_path) do %>
+           <span class='glyphicon glyphicon-calendar mobileNavIcon'></span>
+          <% end %>
+        </div>
 
+        <div class="mobileNavIcon">
          <%= link_to(favorite_path) do %>
-         <span class='glyphicon glyphicon-star'></span>
+          <span class='glyphicon glyphicon-star'></span>
          <% end %>
+        </div>
+
         <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="glyphicon glyphicon glyphicon-align-justify"></span>
         </a>
         <div class="navbar-collapse collapse">
           <ul class="nav pull-right navbar-nav">
+            <li><%= link_to(events_path) do %>
+              <span class='glyphicon glyphicon-calendar'></span>
+            <% end %></li>
+            <li><%= link_to(favorite_path) do %>
+              <span class='glyphicon glyphicon-star'></span>
+            <% end %></li>
             <li><%= link_to 'Settings', edit_user_registration_path %></li>
             <li><%= mail_to "rob@accessfuel.com" do %>
               <span class="glyphicon glyphicon-envelope"></span>
