update seeder function, add meetup_id to model

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -119,8 +119,8 @@ $(".glyphicon-star.index").click(function(){
 
 <script>
 $('#whole_thang').on('swipe', function(){
-	var url = 'http://accessfuel.herokuapp.com/events/'
-	// var url = 'http://localhost:3000/events/'
+	// var url = 'http://accessfuel.herokuapp.com/events/'
+	var url = 'http://localhost:3000/events/'
 	console.log(url)
 	var current_id = <%= params[:id] %>
 	console.log(current_id)
