--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,13 @@
 @import "bootstrap";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300|Oswald:300);
 @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+
+.form_margin {
+  text-align: center;
+  padding-top: 40px;
+}
+
+.sign_in {
+  width: 5%;
+  text-align: center;
+}
