fix some css on show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -56,7 +56,7 @@
 	<section class="description">
 		<div class="container-fluid" style="padding: 0px;">
 			<div class="row group_photo_row">
-				<div class="col-md-12 text-center">
+				<div class="col-md-12 text-center contain">
 					<img src="<%= @event.group_photo %>" class="group_photo">
 				</div>
 			</div>
