--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -134,8 +134,8 @@ $('#whole_thang').on('swipeleft', function(){
 <!-- Right Swipe - newer events -->
 <script>
 $('#whole_thang').on('swiperight', function(){
-	// var url = 'http://accessfuel.herokuapp.com/events/'
-	var url = 'http://localhost:3000/events/'
+	var url = 'http://accessfuel.herokuapp.com/events/'
+	// var url = 'http://localhost:3000/events/'
 	console.log(url)
 	var current_id = <%= params[:id] %>
 	console.log(current_id)
