--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,3 +1,4 @@
+
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
@@ -182,7 +183,7 @@ section {
 .event_description {
 	margin: 0 10px;
 	text-align: center;
-	height: 1000px
+	margin-bottom: 10%;
 }
 
 .date {
