--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,6 +53,13 @@
   margin-top: 10px;
 }
 
+.glyphicon-home.home {
+  text-align: center;
+  width: 100%;
+  margin: auto 0;
+  color: limegreen;
+  margin-top: 5%;
+}
 
 
 
