remove last touchswipe file. decrease swipe threshold

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -25,7 +25,7 @@ $maincolor: lighten(#ccc, 40%);
 
 .navbar-brand {
 	padding: 5px 5px;
-	height: 55px;
+	height: 60px !important;
 }
 
 .navbar-toggle {
