clean up CSS in the Settings Page.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,5 +61,13 @@
   margin-top: 5%;
 }
 
+.settings-email-label {
+  margin-top: 25px;
+}
+
+.settings-back-link {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 
