--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -36,12 +36,11 @@ $maincolor: lighten(#ccc, 40%);
 	color: gray;
 }
 
-.mobileNavIcon {
+/*.mobileNavIcon {
 	color: rgb(248, 146, 49);
 	display: inline-block;
-	/*margin-left: 50%;*/
 	padding: 9px 10px;
-}
+}*/
 
 .glyphicon.glyphicon-star {
 	color: rgb(248, 146, 49);
