--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -127,15 +127,15 @@
      <div class="row row_events">
       <div class="col-md-9 col-sm-9 col-xs-9" id="column1">
         <ul id="col1" style="padding-left: 15px">
-          <li class="event_header"><%= link_to truncate(event.name, length: 20), event_path(event) %></li>
-          <li class="location"><%= truncate(event.venue, length: 20) %> <%= truncate(event.city, length: 15) %></li>
+          <li class="event_header"><%= link_to truncate(event.name, length: 25), event_path(event) %></li>
+          <li class="location"><%= truncate(event.venue, length: 25) %> <%= truncate(event.city, length: 15) %></li>
           <li class="event_date"><%#= date_converter(event.date) %>
            <%= event.event_date.strftime('%a, %b %d, %Y - %l:%M %p') %></li>
         </ul>
       </div>
 
       <div class="col-md-3 col-sm-3 col-xs-3" id="column2">
-        <ul id="col2"><li> </li></ul>
+        <%= image_tag("Icon_final.png", :class => "navbar-brand") %>
       </div>
 
 
