enlarge cancel button.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -29,12 +29,13 @@ input[type="submit"] {
 }
 
 #cancelContainer {
-  width: 70%;
+  width: 94%;
   border: 3px solid rgb(232, 232, 232);
   border-radius: 10px;
   margin: 0 auto;
   margin-top: 50px;
   padding: 10px;
+  font-size: 12px;
 }
 
 #submit {
