change event index photo to be smaller and more inline

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -45,8 +45,9 @@
   }
 
   .event_photo_index {
-    height: 90px;
-    width: auto;
+    max-height: 90px;
+    max-width: 60px;
+    padding-top: 15px;
   }
 
   ul#col1 {
