--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,6 +25,14 @@ input[type="submit"] {
   background-color: rgb(232, 232, 232);
   margin: 0 auto;
   padding: 10px;
+  padding-bottom: 0px;
+}
+
+#categoriesContainer {
+  width: 70%;
+  background-color: rgb(232, 232, 232);
+  margin: 0 auto;
+  padding: 10px;
   padding-bottom: 50px;
 }
 
@@ -70,36 +78,83 @@ input[type="submit"] {
   <div class="settings-email-label"><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %></div><br>
 
-  <div id="interestContainer"><h3><%= f.label :interest %></h3><br />
+  <div id="interestContainer"><h3><%= f.label :categories %></h3><br />
     
-    <%= check_box_tag "Conferences", :interest %> 
-    <%= label_tag "Conferences"%><br>
+    <%= check_box_tag "Appearances & Signings", :categories %> 
+    <%= label_tag "Appearances & Signings" %><br>
     
-    <%= check_box_tag "Trade Shows", :interest %> 
-    <%= label_tag "Trade Shows" %><br>
+    <%= check_box_tag "Classes, Trainings & Workshops", :categories %> 
+    <%= label_tag "Classes, Trainings & Workshops" %><br>
 
-    <%= check_box_tag "Codeathons and Hackathons", :interest %> 
-    <%= label_tag "Codeathons and Hackathons"%><br>
+    <%= check_box_tag "Convention & Conferences", :categories %> 
+    <%= label_tag "Convention & Conferences" %><br>
 
-    <%= check_box_tag "Courses", :interest %> 
-    <%= label_tag "Courses"%><br>
+    <%= check_box_tag "Dinners & Galas", :categories %> 
+    <%= label_tag "Dinners & Galas" %><br>
       
-    <%= check_box_tag "Job Fair", :interest %> 
-    <%= label_tag "Job Fair"%><br>
+    <%= check_box_tag "Festivals & Fairs", :categories %> 
+    <%= label_tag "Festivals & Fairs" %><br>
 
-    <%= check_box_tag "Charity Events & Fundraisers", :interest %> 
-    <%= label_tag "Charity Events & Fundraisers"%><br>
+    <%= check_box_tag "Meetings & Networking Events", :categories %> 
+    <%= label_tag "Meetings & Networking Events" %><br>
 
-    <%= check_box_tag "Classes", :interest %> 
-    <%= label_tag "Classes"%><br>
+    <%= check_box_tag "Seminars & Talks", :categories %> 
+    <%= label_tag "Seminars & Talks" %><br>
 
-    <%= check_box_tag "Online", :interest %> 
-    <%= label_tag "Online"%><br>
+    <%= check_box_tag "Online Courses", :categories %> 
+    <%= label_tag "Online Courses" %><br>
+
+    <%= check_box_tag "Livecasts & Online Events", :categories %> 
+    <%= label_tag "Livecasts & Online Events" %><br>
+
+    <%= check_box_tag "Job fairs", :categories %> 
+    <%= label_tag "Job fairs" %><br>
+
+    <%= check_box_tag "Fireside Chats", :categories %> 
+    <%= label_tag "Fireside Chats" %><br>
+
+    <%= check_box_tag "Charity Events & Fundraisers", :categories %> 
+    <%= label_tag "Charity Events & Fundraisers" %><br>
+
+    <%= check_box_tag "Codeathons & Hackathons", :categories %> 
+    <%= label_tag "Codeathons & Hackathons" %><br>
+  </div>
+
+  <div id="categoriesContainer"><h3><%= f.label :interests %></h3><br />
+    
+    <%= check_box_tag "Entreneurship", :interests %> 
+    <%= label_tag "Entreneurship"%><br>
+    
+    <%= check_box_tag "Development", :interests %> 
+    <%= label_tag "Development" %><br>
+
+    <%= check_box_tag "Design", :interests %> 
+    <%= label_tag "Design"%><br>
+
+    <%= check_box_tag "Startups", :interests %> 
+    <%= label_tag "Startups"%><br>
+      
+    <%= check_box_tag "Learn", :interests %> 
+    <%= label_tag "Learn"%><br>
+
+    <%= check_box_tag "Young Professionals", :interests %> 
+    <%= label_tag "Young Professionals"%><br>
+
+    <%= check_box_tag "Socdial Media", :interests %> 
+    <%= label_tag "Socdial Media"%><br>
+
+    <%= check_box_tag "Digital Marketing", :interests %> 
+    <%= label_tag "Digital Marketing"%><br>
+
+    <%= check_box_tag "Mobile", :interests %> 
+    <%= label_tag "Mobile"%><br>
+
+    <%= check_box_tag "Other", :interests %> 
+    <%= label_tag "Other"%><br>
   
     <div><%= f.submit "Update", id: "submit" %></div>
   </div>
-<% end %>
-  
+<% end %>  
   <div id="cancelContainer">
     <h4>Cancel my account</h4>
 
