add Categories list to Sign Up page & rename Categories and Interests.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -120,36 +120,36 @@ input[type="submit"] {
     <%= label_tag "Codeathons & Hackathons" %><br>
   </div>
 
-  <div id="categoriesContainer"><h3><%= f.label :interests %></h3><br />
+  <div id="categoriesContainer"><h3><%= f.label :interest %></h3><br />
     
-    <%= check_box_tag "Entreneurship", :interests %> 
+    <%= check_box_tag "Entreneurship", :interest %> 
     <%= label_tag "Entreneurship"%><br>
     
-    <%= check_box_tag "Development", :interests %> 
+    <%= check_box_tag "Development", :interest %> 
     <%= label_tag "Development" %><br>
 
-    <%= check_box_tag "Design", :interests %> 
+    <%= check_box_tag "Design", :interest %> 
     <%= label_tag "Design"%><br>
 
-    <%= check_box_tag "Startups", :interests %> 
+    <%= check_box_tag "Startups", :interest %> 
     <%= label_tag "Startups"%><br>
       
-    <%= check_box_tag "Learn", :interests %> 
+    <%= check_box_tag "Learn", :interest %> 
     <%= label_tag "Learn"%><br>
 
-    <%= check_box_tag "Young Professionals", :interests %> 
+    <%= check_box_tag "Young Professionals", :interest %> 
     <%= label_tag "Young Professionals"%><br>
 
-    <%= check_box_tag "Socdial Media", :interests %> 
+    <%= check_box_tag "Socdial Media", :interest %> 
     <%= label_tag "Socdial Media"%><br>
 
-    <%= check_box_tag "Digital Marketing", :interests %> 
+    <%= check_box_tag "Digital Marketing", :interest %> 
     <%= label_tag "Digital Marketing"%><br>
 
-    <%= check_box_tag "Mobile", :interests %> 
+    <%= check_box_tag "Mobile", :interest %> 
     <%= label_tag "Mobile"%><br>
 
-    <%= check_box_tag "Other", :interests %> 
+    <%= check_box_tag "Other", :interest %> 
     <%= label_tag "Other"%><br>
   
     <div><%= f.submit "Update", id: "submit" %></div>
