--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -76,7 +76,7 @@
 
         <div class="interestBox">
           <%= check_box_tag "Codeathons & Hackathons", :categories %> 
-          <%= label_tag "Codeathons & Hackathons"%>
+          <%= label_tag "Codeathons & Hackathons" %>
         </div>
       </div>
     </div>
@@ -126,8 +126,8 @@
         </div>
 
         <div class="interestBox">
-          <%= check_box_tag "Socdial Media", :interest %>
-          <%= label_tag "Socdial Media"%>
+          <%= check_box_tag "Social Media", :interest %>
+          <%= label_tag "Social Media"%>
         </div>
 
         <div class="interestBox">
