Add favorite function

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -236,11 +236,17 @@ $(document).ready(function(){
  
   // Callback function references the event target and adds the 'swiperight' class to it
   function swiperightHandler( event ){
-    $( event.target ).addClass( "yellow" );
+    $( event.target ).addClass( "yellow" )
+    var info = $(event.target).find('a')
+    var link = info[0]
+    var string = String(link)
+    var start = string.lastIndexOf('/')
+    var num = string.substring(start+1, string.length)
+    checkCookie(parseInt(num))
   }
-
 });
 
 </script>
+
 
 
