--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -167,10 +167,36 @@ $(".glyphicon-star.index").click(function(){
 <script>
 $(document).ready(function(){
 
-  $(document).bind("mobileinit", function () {
-    $.event.special.swipe.horizontalDistanceThreshold = 10;
-    horizontalDistanceThreshold = Math.round(30 / window.devicePixelRatio);
+
+  var touchStopEvent = "touchcancel touchend" || "mouseup";
+
+  // setup new event shortcuts
+  $.each( ( "touchstart touchmove touchend touchcancel " +
+    "tap taphold " +
+    "swipe swipeleft swiperight " +
+    "scrollstart scrollstop" ).split( " " ), function( i, name ) {
+
+    $.fn[ name ] = function( fn ) {
+      return fn ? this.bind( name, fn ) : this.trigger( name );
+    };
+
+    // jQuery < 1.8
+    if ( $.attrFn ) {
+      $.attrFn[ name ] = true;
+    }
   });
+
+
+  $(document).bind("mobileinit", function () {
+    // Swipe horizontal displacement must be more than this.
+    horizontalDistanceThreshold: window.devicePixelRatio >= 2 ? 15 : 30;
+
+    // Swipe vertical displacement must be less than this.
+    verticalDistanceThreshold: window.devicePixelRatio >= 2 ? 15 : 30;
+  });
+
+
+
 
   var els = document.querySelectorAll("div.event_wrapper");
 
@@ -219,6 +245,13 @@ $(document).ready(function(){
     $( event.target ).addEventListener( "touchend", false )
     console.log("homo");
   };
+
+  
+
+
+
+
+
 
   // $.event.special.swipe.prototype = {
   //   start: function() {
