update favorite function

--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -248,5 +248,17 @@ $(document).ready(function(){
 
 </script>
 
+ <script>
+// $('#whole_thang').on('taphold', function(){
+//   var current_id = '<%= params[:id] %>'
+//   var current_name = '<%= @event.name %>'
+//   console.log(current_name)
+//   console.log(current_id)
+//   checkCookie(current_id.to_i);
+//   console.log("Cookie: " + current_id + " Saved");
+//   alert("Cookie: " + current_name + " Saved");
+// })
+// </script>
+
 
 
