--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -202,6 +202,8 @@ section {
 
 .container-fluid.content {
 	width: 100%;
+	padding-left: 5px;
+	padding-right: 5px;
 	margin: 0px auto 0px auto;
 
 	div.event_wrapper {
